Minor fix for multiple linear regression

--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "348ba386",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expected minimum MSE: 85.7671\n"
+      "Expected minimum MSE: 1.3071\n"
      ]
     }
    ],
@@ -48,11 +48,11 @@
     "\n",
     "X_aug = np.hstack([np.ones((N, 1)), X])\n",
     "W_true = np.random.uniform(0, 5, size=(k + 1, 1))\n",
-    "y = X_aug @ W_true + np.random.normal(loc=0, scale=2, size=(N, 1))\n",
+    "y = X_aug @ W_true + np.random.normal(loc=0, scale=1, size=(N, 1))\n",
     "\n",
     "## MSE for reference\n",
     "y_true = X_aug @ W_true\n",
-    "mse = np.sum(np.square(y_true - y))\n",
+    "mse = np.mean(np.square(y_true - y))\n",
     "print(f\"Expected minimum MSE: {mse:.4f}\")"
    ]
   },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6d402fe1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "f762386a",
    "metadata": {},
    "outputs": [
@@ -86,15 +86,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction MSE: 79.0716\n"
+      "Prediction MSE: 1.1773\n"
      ]
     }
    ],
    "source": [
     "y_pred = X_aug @ W\n",
-    "mse = np.sum(np.square(y_pred - y))\n",
+    "mse = np.mean(np.square(y_pred - y))\n",
     "print(f\"Prediction MSE: {mse:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30e9de78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
